FEAT: CONFIGURACIÓN SEO

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>SEVICI RECOMMENDER</title>
+    <title>Bicicator</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="¡Optimiza tus búsquedas de estaciones de SEVICI! Ponemos a tu disposición herramientas para predecir y filtrar el estado de las estaciones."
     />
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
